--- a/sytles.css
+++ b/sytles.css
@@ -49,7 +49,7 @@
 
   .hero-summary {
     height: 126px;
-    width: 288px;
+    width: auto;
     left: 16px;
     font-family: Poppins, sans-serif;
     font-size: 14px;
@@ -58,6 +58,7 @@
     letter-spacing: -0.01em;
     text-align: left;
     margin: 20px 0 40px 0;
+    padding-left: 8px;
   }
 
   .collab {
