--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
   .wrapper {
     width: 100%;
+    height: 100vh;
   }
 
   .nav-container {
@@ -16,7 +17,7 @@
     flex: 1;
   }
 
-  .logo img{
+  .logo img {
     width: 111px;
   }
 
@@ -79,5 +80,111 @@
 
   .content-geo img {
     flex: 1;
+  }
+
+  .projects {
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+  }
+
+  .projects h1 {
+    height: 50px;
+    width: 181px;
+    font-family: Playfair Display, sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0;
+    text-align: left;
+    color: #1a2236;
+    margin: 40px 16px 32px 16px;
+  }
+
+  .project-grid-list {
+    display: grid;
+    grid-template-rows: auto auto;
+  }
+
+  .project-item {
+    height: auto;
+  }
+
+  .project-item img {
+    max-width: 100%;
+    display: block;
+  }
+
+  .project-item-desc {
+    display: flex;
+    flex-direction: column;
+    background: #1a2236;
+  }
+
+  .project-item-desc h1 {
+    margin: 20px 16px;
+    height: 16px;
+    width: 264px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 16px;
+    text-align: left;
+    color: white;
+  }
+
+  .project-item-desc ul.languages {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+  }
+
+  .languages {
+    padding: 0;
+    margin-left: 16px;
+  }
+
+  ul.languages li {
+    list-style: none;
+    background: #98dede;
+    width: 69px;
+    font-family: Poppins, sans-serif;
+    font-size: 10px;
+    font-weight: 300;
+    line-height: 8px;
+    letter-spacing: 0;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .see-more {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid white;
+    height: auto;
+    width: 178px;
+    border-radius: 0;
+    padding: 10px;
+    margin-left: 16px;
+    margin-bottom: 20px;
+  }
+
+  .see-more a {
+    height: 24px;
+    width: 124px;
+    color: white;
+    text-decoration: none;
+    font-family: Poppins, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0;
+    text-align: center;
+  }
+
+  .see-more img {
+    width: 20.57px;
+    height: 15.35px;
+    align-self: center;
   }
 }
