--- a/styles.css
+++ b/styles.css
@@ -139,9 +139,19 @@
     gap: 10px;
   }
 
-  .languages {
+  .project-item-desc .languages {
     padding: 0;
     margin-left: 16px;
+  }
+
+  .category-list li {
+    color: white;
+    font-family: Poppins, sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+    letter-spacing: -0.0525em;
+    text-align: left;
   }
 
   ul.languages li {
@@ -186,5 +196,112 @@
     width: 20.57px;
     height: 15.35px;
     align-self: center;
+  }
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    margin: 0 16px;
+  }
+
+  .about h1 {
+    height: 50px;
+    width: 134px;
+    font-family: Playfair Display, sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0;
+    text-align: left;
+    margin-top: 56px;
+    margin-bottom: 20px;
+  }
+
+  p#bio {
+    height: 126px;
+    width: auto;
+    font-family: Poppins, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0;
+    text-align: left;
+  }
+
+  .download-cv {
+    display: flex;
+    justify-content: center;
+    background: #1a2236;
+    border: 1px solid #1a2236;
+    padding: 10px;
+    gap: 20px;
+  }
+
+  .download-cv a {
+    font-family: Poppins, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+  }
+
+  .download-cv img {
+    width: 24px;
+  }
+
+  .categories {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-bottom: 50px;
+    margin-top: 40px;
+  }
+
+  .category-list h1 {
+    color: white;
+    height: 30px;
+    font-family: Poppins, sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+    line-height: 30px;
+    letter-spacing: 0;
+    text-align: left;
+    margin-top: 50px;
+    margin-left: 50px;
+  }
+
+  .category-list ul {
+    padding-left: 0;
+    margin-left: 50px;
+    align-self: flex-start;
+    margin-bottom: 53px;
+    list-style-position: inside;
+  }
+
+  .category-list.languages {
+    background: #1c528a;
+    background-image: url('/assets/images/project-bg-1.png');
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    background-size: 102px;
+  }
+
+  .category-list.frameworks {
+    background: #e2505c;
+    background-image: url('/assets/images/project-bg-2.png');
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    background-size: 102px;
+  }
+
+  .category-list.skills {
+    background: #febf52;
+    background-image: url('/assets/images/project-bg-3.png');
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    background-size: 102px;
   }
 }
