--- a/styles.css
+++ b/styles.css
@@ -524,133 +524,20 @@
     justify-content: space-between;
     left: -40px;
   }
+
+.menu-overlay {
+  /* position: relative; */
 }
 
-@media only screen and (min-width: 768px){
-
-  .hero-content, header.nav-container  {
-    display: none;
-  }
-
-  body {
-    margin: 0px;
-  }
-  .wrapper {
+  .menu-footer {
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    height: 100vh;
   }
 
-
-  .nav-container-desktop {
-    border-bottom: 1px solid goldenrod;
-    /* width: 100%; */
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .menu-footer img {
+    width: 100%;
   }
-
-  nav.menu-desktop ul {
-    display: flex;
-    gap: 50px;
-    justify-content: center;
-    align-items: center;
-    margin: 38px 536px;
-    padding:0px;
-  }
-
-  nav.menu-desktop li {
-    list-style: none;
-    height: 24px;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: right;
-    color: #1A2236;
-  }
-
-  .menu-desktop li.active::after {
-    border-bottom: 2px solid #1A2236;
-    width: 70%;
-    content: "";
-    display: block;
-  }
-
-  .hero-content-desktop{
-    height: 100%;
-    background-image: url(./assets/images/image_dots.svg);
-    background-repeat: no-repeat,no-repeat;
-    background-position: 62% 92%;
-    margin-bottom: 210px;
-  }
-
-  .grid-col-1 {
-    grid-column: 1;
-    padding-top: 100px;
-  }
-
-  .grid-col-2 {
-    grid-column: 2;
-  }
-
-  .grid-col-2 img{
-   width: 490px;
-   float: right;
-  }
-
-  .hero-wrap {
-    /* max-width: 484px; */
-    padding-left:160px;
-    height: 220px;
-    display: grid;
-    /* grid-template-columns: 484px 702px; */
-    grid-template-columns: auto auto;
-    column-gap: 20px;
-  }
-
-   p.hero-name {
-    margin: 0px;
-    font-family: 'Playfair Display', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 110px;
-    line-height: 85%;
-    color: #1A2236;
-    /* border: 1px solid #1A2236; */
-    width: 484px;
-  }
-
-   .hero-summary {
-    margin-top: 30px;
-    margin-bottom: 20px;
-    width: 484px;
-    height: auto;
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: -0.01em;
-    color: #1A2236;
-    /* border: 1px solid #1A2236; */
-  } 
-
-  button.btn-primary-dark {
-    text-decoration: none;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    align-self: center;
-    width: 254px;
-    height: 70px;
-    background: #1a2236;
-    border: 1px solid #1a2236;
-  }
-
-
-
 }
+
+
