Update index.html and styles.css by adding menu overlay click functions for JavaScript

--- a/styles.css
+++ b/styles.css
@@ -523,10 +523,14 @@
     left: -40px;
   }
 
-.menu-overlay {
+#menu-overlay-container {
+  position: absolute;
+  top: 0;
   display: grid;
   height: 100%;
+  background-color: #fff;
   grid-template-rows: 100px auto 100px;
+  z-index: 1;
 }
 
 header.menu-nav-container {
